version/0.1/_sources/examples/00-basic-pyvista-examples/plain_usage.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/00-basic-pyvista-examples/plain_usage.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_00-basic-pyvista-examples_plain_usage.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_00-basic-pyvista-examples_plain_usage.py:


.. _ref_plain_usage:

===============
Use the plotter
===============

This example shows how to add one or more meshes to the plotter.

.. GENERATED FROM PYTHON SOURCE LINES 34-37

Add a mesh to the plotter
=========================
This code shows how to add a single mesh to the plotter.

.. GENERATED FROM PYTHON SOURCE LINES 37-54

.. code-block:: Python


    import pyvista as pv

    from ansys.tools.visualization_interface import Plotter

    mesh = pv.Cube()

    # Create a plotter
    pl = Plotter()

    # Add the mesh to the plotter
    pl.plot(mesh)

    # Show the plotter
    pl.show()





.. image-sg:: /examples/00-basic-pyvista-examples/images/sphx_glr_plain_usage_001.png
   :alt: plain usage
   :srcset: /examples/00-basic-pyvista-examples/images/sphx_glr_plain_usage_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-58

Add a list of meshes
====================
This code shows how to add a list of meshes to the plotter.

.. GENERATED FROM PYTHON SOURCE LINES 58-74

.. code-block:: Python


    import pyvista as pv

    from ansys.tools.visualization_interface import Plotter

    mesh1 = pv.Cube()
    mesh2 = pv.Sphere(center=(2, 0, 0))
    mesh_list = [mesh1, mesh2]
    # Create a plotter
    pl = Plotter()

    # Add a list of meshes to the plotter
    pl.plot(mesh_list)

    # Show the plotter
    pl.show()



.. image-sg:: /examples/00-basic-pyvista-examples/images/sphx_glr_plain_usage_002.png
   :alt: plain usage
   :srcset: /examples/00-basic-pyvista-examples/images/sphx_glr_plain_usage_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.786 seconds)


.. _sphx_glr_download_examples_00-basic-pyvista-examples_plain_usage.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plain_usage.ipynb <plain_usage.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plain_usage.py <plain_usage.py>`
